--- a/_includes/pricecards/moz-abogado.html
+++ b/_includes/pricecards/moz-abogado.html
@@ -1,24 +1,18 @@
 <div class="row">
     <div class="col s12 m8 l6">
-        <div class="card horizontal small">
-            <div class="responsive-image">
+        <div class="card">
+            <div class="image-responsive">
                 <img height="285" width="285" alt="6.5k-9.3k Monthly Volume visualization" src="/assets/moz keyword analyze abogado volume.png"/>
+                <br/>
+
+            </div>
+            <div class="card-stacked">            </div>
+            <div class="card-action center-align">
+             <a class="black-text" href="//analytics.moz.com/pro/keyword-explorer/keyword/overview?locale=en-US&q=abogado">
+               <img height="20" src="/assets/moz_logo.png" alt="moz logo">
+             </a>
             </div>
 
-            <div class="card-stacked">
-                <div class="card-content">
-
-                    Moz: Abogado (es-US), 6.5k-9.3k Monthly Volume.
-
-                </div>
-
-                <div class="card-action">
-                    <!-- TODO: turn pricing on -->
-                    <!-- <a class='waves-effect waves-blue btn btn-flat btn-small ilike-blue-container' href='{{ post.url | relative_url }}'>
-                         see pricing
-                         </a> -->
-                </div>
-            </div>
         </div>
     </div>
 </div>
