--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,14 +21,12 @@
   <div class="page-footer final-footer z-depth-1">
     <div class="footer-copyright">
       <div class="container">
-        © 2019 Case Linguist
-        <span itemscope itemtype="http://schema.org/PostalAddress">
-              <span itemprop="streetAddress" content="5829 S. Francisco Ave"/>
-              <span itemprop="addressLocality" content="Chicago, IL">
-              <span itemprop="postalCode" content="60629"/>
 
-            </span>
-          <a class="grey-text text-lighten-4 right" href="mailto:rene@marketingforlawyers.org?subject=Marketing+Interpretation"><span class="hide-on-small-only">E-mail: </span><span itemprop="email">rene@marketingforlawyers.org</span></a>
+        <span class="hide-on-small-only show-on-medium-and-up">© 2019 Case Linguist LLC</span>
+        <a href="{{ '/sitemap.html' | relative_url }}"><span class="grey-text text-lighten-4">Visual Site Map</span></a>
+        <span class="show-on-small hide-on-med-and-up right">© 2019 Case Linguist LLC</span>
+          <a class="grey-text text-lighten-4 right" href="mailto:rene@marketingforlawyers.org?subject=Marketing+Interpretation"><span>E-mail: </span><span>rene@marketingforlawyers.org</span></a>
+
       </div>
     </div>
   </div>
