--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@ excerpt_separator: <!--more-->
       <div class="intro-wrap">
         <div class="name-text">Rene M. Paccha</div>
         <div class="paragraph-light">SEO, Case Linguist LLC</div>
-        <h1 class="heading-jumbo">Case Linguist LLC provides internet marketing services for English and Spanish speaking audiences. We offer comprehensive packages and a la carte services that can be catered to your needs.</h1>
+        <h2 class="heading-jumbo">Case Linguist LLC provides internet marketing services for English and Spanish-speaking audiences. We offer comprehensive packages and a la carte services that can be catered to your needs.</h2>
       </div>
     </div>
   </div>
@@ -28,7 +28,9 @@ excerpt_separator: <!--more-->
   <!-- ok -->
   <div class='row'>
     <div class='featured post'>
-      <div class=""><h4>Featured Post</h4></div>
+      <div class="flow-text">
+        <h1 style="font-size: 2rem; font-weight: 700;">Featured Post</h1>
+      </div>
 
       {{ content }}
       <ul class='post-list'>
@@ -39,9 +41,9 @@ excerpt_separator: <!--more-->
             {{ post.date | date: "%B %e, %Y" }}
             {% endunless %}
           </span>
-          <h2>
+          <h3>
             <a class='post-link strong-blog-font' href='{{ post.url | relative_url }}'>{{ post.title | escape }}</a>
-          </h2>
+          </h3>
           <span class='blog-font'>{{ post.excerpt }}</span>
         </li>
         <p class='align-right'>
