--- a/assets/main.scss
+++ b/assets/main.scss
@@ -58,7 +58,7 @@ h1, h2, h3, h4, h5, p, li, span {
   min-width: 310px;
   // max-width: 800px;
   height: 400px;
-  margin: auto auto
+  margin: auto auto;
 }
 
 @import "minima";
