--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title | escape }}</h2>
+    <p class="footer-heading">{{ site.title | escape }}</p>
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
