updating home.html

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -147,7 +147,7 @@ excerpt_separator: <!--more-->
       "@context": "http://schema.org",
       "@type": "WebSite",
       "url": "{{ site.url }}",
-      "name": "{{ site.title }} | {{ site.primary_tag_desc }}"
+      "name": "{{ site.title }} | {{ site.primary_tag_desc }}",
       "desciption": "{{ site.main_service_message }}"
     }
   </script>
