--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -148,7 +148,7 @@ excerpt_separator: <!--more-->
       "@type": "WebSite",
       "url": "{{ site.url }}",
       "name": "{{ site.title }} | {{ site.primary_tag_desc }} | Chicago, IL",
-      "desciption": "{{ site.main_service_message }}"
+      "description": "{{ site.main_service_message }}"
     }
   </script>
 
