--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,37 +1,29 @@
 ---
 layout: default
-excerpt_separator: <!--more-->
+excerpt_separator: <!-- more -->
 ---
-
 <div class='home home-section section'>
-  <div class="logo-wrap valign-wrapper">
-    <div class="row">
-      <span class="center-align"><img  src="assets/logo.png" width="350" alt="logo"></span>
+  <div class='logo-wrap valign-wrapper'>
+    <div class='row'>
+      <span class='center-align'>
+        <img alt='case linguist logo' src='assets/logo.png' width='350'>
+      </span>
     </div>
   </div>
-
-
-  <!-- adding splash message -->
-  <!-- ok -->
-  <div id="slide" class="splash-section">
-    <div class="msg-container">
-      <div class="intro-wrap">
-        <div class="name-text">Rene M. Paccha</div>
-        <div class="paragraph-light">SEO, Case Linguist LLC</div>
-        <p class="heading-jumbo">{{ site.main_service_message }}</p>
+  <div class='splash-section' id='slide'>
+    <div class='msg-container'>
+      <div class='intro-wrap'>
+        <div class='name-text'>Rene M. Paccha</div>
+        <div class='paragraph-light'>SEO, Case Linguist LLC</div>
+        <p class='heading-jumbo'>{{ site.large_tagline }}</p>
       </div>
     </div>
   </div>
-
-
-  <!-- Pinned Post -->
-  <!-- ok -->
   <div class='row'>
     <div class='featured post'>
-      <div class="flow-text">
-        <h1 style="font-size: 2rem; font-weight: 700;">Featured Post</h1>
+      <div class='flow-text'>
+        <h1 style='font-size: 2rem; font-weight: 700;'>Featured Post</h1>
       </div>
-
       {{ content }}
       <ul class='post-list'>
         {% for post in site.posts limit:1 offset:1 %}
@@ -41,8 +33,8 @@ excerpt_separator: <!--more-->
             {{ post.date | date: "%B %e, %Y" }}
             {% endunless %}
           </span>
-          <br/>
-          <br/>
+          <br>
+          <br>
           <div>
             <a class='post-link strong-blog-font' href='{{ post.url | relative_url }}'>{{ post.title | escape }}</a>
           </div>
@@ -56,101 +48,68 @@ excerpt_separator: <!--more-->
         {% endfor %}
       </ul>
     </div>
-
-
   </div>
-
-
-
-
   <div class='row'>
-    <div class='col s12 m4 l5'>
-
-    </div>
+    <div class='col s12 m4 l5'></div>
   </div>
-
-  <div class="section">
-    <br/>
-
-    <div class="col s12 m6 l3">
-      <div class="row v-align-wrapper">
-
-        <div class="posts-list">
-          <div class="col s12 m6 secondary-container">
-
-            <!-- <br /> -->
-
-            <ul class="collection with-header">
-              <!-- set post limit -->
-              <li class="collection-header">
-                <h2 class='page-heading '>
-                  Blog
-                </h2>
-              </li>
-
-              {% for post in site.posts limit:9 %}
-
-              {% assign currentdate = post.date | date: "%b %e - %a" %}
-              {% if currentdate != date %}
-              <!-- {% unless forloop.first %}</ul>{% endunless %} -->
-
-
-              {% assign date = currentdate %}
-
-
-              {% endif %}
-              <li class="collection-item">
-
-                <a href="{{ post.url }}">
-                  <!-- {% if forloop.first %}<span class="new badge"></span></a>{% endif %}                                       -->
-                  <div class="collection-content-starts">{{ post.title }}
-                    <!-- secondary date content -->
-
-                    <span class="badge btn btn-small btn-flat waves-effect waves-blue ilike-blue-container">
-                      <div class="hide-on-small-only">
-                        <span id='y_{{post.date | date: "%Y_%B"}}' class="shifty-date date-sub-display">{{currentdate}}</span>
-                      </div>
-                    </span>
-                  </div>
-
-                  <!-- for small devices -->
-                  <div class="show-on-small hide-on-med-and-up">
-                    <span id='y_{{post.date | date: "%Y_%B"}}' class="grey-text shifty-date date-sub-display">{{currentdate}}</span>
-                  </div>
-
-                </a>
-              </li>
-              {% if forloop.last %}</ul>{% endif %}
-              {% endfor %}
-            </div>
-          </div>
+  <div class='section'>
+    <br>
+    <div class='col s12 m6 l3'>
+      <div class='row v-align-wrapper'>
+        <div class='posts-list'>
+          <div class='col s12 m6 secondary-container'><ul class='collection with-header'>
+            <li class='collection-header'>
+              <h2 class='page-heading'>
+                Blog
+              </h2>
+            </li>
+            {% for post in site.posts limit:9 %}
+            {% assign currentdate = post.date | date: "%b %e - %a" %}
+            {% if currentdate != date %}
+            {% assign date = currentdate %}
+            {% endif %}
+            <li class='collection-item'>
+              <a href='{{ post.url }}'>
+                <div class='collection-content-starts'>
+                  {{ post.title }}
+                  <span class='badge btn btn-small btn-flat waves-effect waves-blue ilike-blue-container'>
+                    <div class='hide-on-small-only'>
+                      <span class='shifty-date date-sub-display' id='y_{{post.date | date: "%Y_%B"}}'>{{currentdate}}</span>
+                    </div>
+                  </span>
+                </div>
+                <div class='show-on-small hide-on-med-and-up'>
+                  <span class='grey-text shifty-date date-sub-display' id='y_{{post.date | date: "%Y_%B"}}'>{{currentdate}}</span>
+                </div>
+              </a>
+            </li>
+            {% if forloop.last %}
+          </ul>{% endif %}
+          {% endfor %}
         </div>
       </div>
     </div>
   </div>
-  <!-- headshot section -->
-  <div class="divider"></div>
-  <div class="section">
-
-    <a href="{{ '/about/' | relative_url }}"><h3 class="flow-text">Based in Chicago, IL</h3></a>
-    <!-- image start -->
-    <div class="col s12 m6">
-
-      <!-- image -->
-      <img class="needs-to-be-own-thing materialboxed center-align responsive-img " width="650" src="{{ '/assets/rene-m-paccha-chicago-250.png' | relative_url }}" srcset="{{ '/assets/rene-m-paccha-chicago-500.png' | relative_url }} 500w, {{ '/assets/rene-m-paccha-chicago.png' | relative_url }} 1000w" alt="rene m paccha picture willis tower background">
-    </div>
+</div>
+</div>
+<div class='divider'></div>
+<div class='section'>
+  <a href='{{ "/about/" | relative_url }}'>
+    <h3 class='flow-text'>Based in Chicago, IL</h3>
+  </a>
+  <div class='col s12 m6'>
+    <img alt='rene m paccha picture willis tower background' class='needs-to-be-own-thing materialboxed center-align responsive-img' src='{{ "/assets/rene-m-paccha-chicago-250.png" | relative_url }}' srcset='{{ "/assets/rene-m-paccha-chicago-500.png" | relative_url }} 500w, {{ "/assets/rene-m-paccha-chicago.png" | relative_url }} 1000w' width='650'>
   </div>
+</div>
+<script type='application/ld+json'>
 
-
-  <script type="application/ld+json">
     {
       "@context": "http://schema.org",
       "@type": "WebSite",
       "url": "{{ site.url }}",
       "name": "{{ site.title }} | {{ site.primary_tag_desc }} | Chicago, IL",
-      "description": "{{ site.main_service_message }}"
+      "description": "{{ site.large_tagline }}"
     }
-  </script>
 
-
-  {% include photo-pop.html %}
+</script>
+{% include photo-pop.html %}
