--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,21 +1,17 @@
 ---
 layout: default
 ---
-
-<article class="post" itemscope itemtype="//schema.org/BlogPosting">
-  <header class="post-header">
-    <h1 class="post-title strong-blog-font" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta strong-blog-font"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {{ page.date | date: "%A, %B %e, %Y" }}
-    </time>{% if page.author %}<span itemprop="author" itemscope itemtype="http://schema.org/Person"></span>{% endif %}</p>
-  </header>
-
-  <div class="post-content blog-font" itemprop="articleBody">
-    {{ content }}
-  </div>
-
-  {% if site.tags %}
-  <!-- {% include disqus_comments.html %} -->
-  {% endif %}
-
+<article class='post'>
+  <header class='post-header'>
+    <h1 class='post-title strong-blog-font'>{{ page.title | escape }}</h1>
+    <p class='post-meta strong-blog-font'><time datetime='{{ page.date | date_to_xmlschema }}'>
+      {{ page.date | date: '%A, %B %e, %Y' }}
+    </time>{% if page.author %}
+    <span></span>
+    {% endif %}
+  </p>
+</header>
+<div class='post-content blog-font'>
+  {{ content }}
+</div>
 </article>
