--- a/assets/main.scss
+++ b/assets/main.scss
@@ -143,6 +143,13 @@ a:visited, a:hover {
   margin-left: 30px;
 }
 
+.collection-content-starts {
+    line-height: 20px;
+    padding: 24px;
+    margin: auto 5px;
+    /* text-align: left; */
+}
+
 @media (max-width: 991px) {
   .heading-jumbo {
     font-size: 56px;
