--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,6 +27,10 @@ excerpt_separator: <!-- more -->
           </div>
         </div>
     </div>
+
+    <div class="divider">
+
+    </div>
     <div class="row featured-post">
         <div class="col s12 m8 l6">
           <div class='featured post'>
