--- a/_includes/pricecards/moz-abogado.html
+++ b/_includes/pricecards/moz-abogado.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col s12 m8 l6">
         <div class="card">
-            <div class="image-responsive">
+            <div class="image-responsive center">
                 <img height="285" width="285" alt="6.5k-9.3k Monthly Volume visualization" src="/assets/moz keyword analyze abogado volume.png"/>
                 <br/>
 
