--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ excerpt_separator: <!-- more -->
 
 <div class="">
   <div class="logo-wrap v-align-wrapper">
-    <div class="row ">
+    <div class="row center">
         <div class="col s12 l3">
           <span class='center-align'>
             <img alt='case linguist logo' src='assets/logo.png' width='350'>
