updating sitemap no dirs

--- a/_includes/charts/sitemap.html
+++ b/_includes/charts/sitemap.html
@@ -55,7 +55,7 @@
     id: 'Law Firm SEO',
     color: '#BFD6ED',
     column: 3,
-    title: "<a href='{{ '/law-firm-seo/' | relative_url }}'>directory</a>"
+    // title: "<a href='{{ '/law-firm-seo/' | relative_url }}'>directory</a>"
   },
   {
     id: 'Testimonials',
@@ -66,7 +66,7 @@
     id: 'Immigration',
     color: '#BFD6ED',
     column: 4,
-    title: "<a href='{{ '/immigration/' | relative_url }}'>directory</a>"
+    // title: "<a href='{{ '/immigration/' | relative_url }}'>directory</a>"
   },
   {
     id: 'Twitter.com',
