--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,29 +6,29 @@ excerpt_separator: <!-- more -->
 
 <div class='home home-section section'>
 
-<div class="">
-  <div class="logo-wrap v-align-wrapper">
-    <div class="row center">
+  <div class="">
+    <div class="logo-wrap v-align-wrapper">
+      <div class="row center">
         <div class="col s12 l3">
           <span class='center-align'>
             <img alt='case linguist logo' src='assets/logo.png' width='350'>
           </span>
         </div>
-    </div>
+      </div>
 
-  </div>
+    </div>
     <div class="row tagline">
-        <div class="col s12">
-          <div class='splash-section' id='slide'>
-            <div class='msg-container'>
-              <div class='intro-wrap'>
-                <div class='name-text'>Rene M. Paccha</div>
-                <div class='paragraph-light'>SEO, Case Linguist LLC</div>
-                <p class='heading-jumbo'>{{ site.large_tagline }}</p>
-              </div>
+      <div class="col s12">
+        <div class='splash-section' id='slide'>
+          <div class='msg-container'>
+            <div class='intro-wrap'>
+              <div class='name-text'>Rene M. Paccha</div>
+              <div class='paragraph-light'>SEO, Case Linguist LLC</div>
+              <p class='heading-jumbo'>{{ site.large_tagline }}</p>
             </div>
           </div>
         </div>
+      </div>
     </div>
 
     <div class="divider">
@@ -38,40 +38,46 @@ excerpt_separator: <!-- more -->
 
       <div class="">
         <div class="row">
-            <div class="col s12 ">
-              <div class='featured post'>
-                <div class=''>
-                  <h1 style='font-size: 2rem; font-weight: 700;'>Featured Post</h1>
-                </div>
-                <div class="section nested-section">
+          <div class="col s12 ">
+            <div class='featured post'>
+              <div class=''>
+                <h1 style='font-size: 2rem; font-weight: 700;'>Featured Post</h1>
+              </div>
+              <div class="section nested-section">
                 {{ content }}
-                </div>
-
-                <ul class='post-list'>
-                  {% for post in site.posts limit:1 offset:1 %}
-                  <li>
-                    <span class='post-meta strong-blog-font'>
-                      {% unless post.pinned %}
-                      {{ post.date | date: "%B %e, %Y" }}
-                      {% endunless %}
-                    </span>
-                    <br>
-                    <br>
-                    <div>
-                      <a class='post-link strong-blog-font' href='{{ post.url | relative_url }}'>{{ post.title | escape }}</a>
-                    </div>
-                    <span class='blog-font'>{{ post.excerpt }}</span>
-                  </li>
-                  <p class='align-right'>
-                    <a class='waves-effect waves-blue btn btn-flat btn-small ilike-blue-container' href='{{ post.url | relative_url }}'>
-                      Keep Reading...
-                    </a>
-                  </p>
-                  {% endfor %}
-                </ul>
               </div>
 
+              <ul class='post-list'>
+                {% for post in site.posts %}
+                <li>
+                  {% if post.pinned %}
+                  <span class='post-meta strong-blog-font'>
+
+                    {{ post.date | date: "%B %e, %Y" }}
+
+                  </span>
+                  <br>
+                  <br>
+
+                  <div>
+
+                    <a class='post-link strong-blog-font' href='{{ post.url | relative_url }}'>{{ post.title | escape }}</a>
+                  </div>
+                  <span class='blog-font'>{{ post.excerpt }}</span>
+
+
+                </li>
+                <p class='align-right'>
+                  <a class='waves-effect waves-blue btn btn-flat btn-small ilike-blue-container' href='{{ post.url | relative_url }}'>
+                    Keep Reading...
+                  </a>
+                </p>
+                {% endif %}
+                {% endfor %}
+              </ul>
             </div>
+
+          </div>
         </div>
 
       </div>
@@ -85,8 +91,8 @@ excerpt_separator: <!-- more -->
       <div class="row blog-list ">
 
 
-          <div class="col s12 m9 l6">
-        <ul class='collection with-header'>
+        <div class="col s12 m9 l6">
+          <ul class='collection with-header'>
             <li class='collection-header'>
               <h2 class='page-heading'>
                 Blog
@@ -118,21 +124,21 @@ excerpt_separator: <!-- more -->
             {% if forloop.last %}
           </ul>{% endif %}
           {% endfor %}
-          </div>
-          <a href='{{ "/about/" | relative_url }}'>
-            <h3 class='flow-text center-align'>Based in Chicago, IL</h3>
-          </a>
+        </div>
+        <a href='{{ "/about/" | relative_url }}'>
+          <h3 class='flow-text center-align'>Based in Chicago, IL</h3>
+        </a>
 
-          <div class="headshot col s12 m3 l5 offset-l1">
-            <img alt='rene m paccha picture willis tower background' class='needs-to-be-own-thing materialboxed center-align responsive-img' src='{{ "/assets/rene-m-paccha-chicago-250.png" | relative_url }}' srcset='{{ "/assets/rene-m-paccha-chicago-500.png" | relative_url }} 500w, {{ "/assets/rene-m-paccha-chicago.png" | relative_url }} 1000w' width='650'>
-          </div>
+        <div class="headshot col s12 m3 l5 offset-l1">
+          <img alt='rene m paccha picture willis tower background' class='needs-to-be-own-thing materialboxed center-align responsive-img' src='{{ "/assets/rene-m-paccha-chicago-250.png" | relative_url }}' srcset='{{ "/assets/rene-m-paccha-chicago-500.png" | relative_url }} 500w, {{ "/assets/rene-m-paccha-chicago.png" | relative_url }} 1000w' width='650'>
+        </div>
       </div>
     </div>
-</div>
+  </div>
 
 
 
-<script type='application/ld+json'>
+  <script type='application/ld+json'>
 
     {
       "@context": "http://schema.org",
@@ -142,5 +148,5 @@ excerpt_separator: <!-- more -->
       "description": "{{ site.large_tagline }}"
     }
 
-</script>
-{% include photo-pop.html %}
+  </script>
+  {% include photo-pop.html %}
