updating grid based feature

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -68,7 +68,7 @@ excerpt_separator: <!-- more -->
 
                 </li>
                 <p class='align-right'>
-                  <a class='waves-effect waves-blue btn btn-flat btn-small ilike-blue-container' href='{{ post.url | relative_url }}'>
+                  <a id="pinned-reading" class='waves-effect waves-blue btn btn-flat btn-small ilike-blue-container' href='{{ post.url | relative_url }}'>
                     Keep Reading...
                   </a>
                 </p>
