--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,9 @@ layout: default
 <article class='post'>
   <header class='post-header'>
     <h1 class='post-title strong-blog-font'>{{ page.title | escape }}</h1>
-    <p class='post-meta strong-blog-font'><time datetime='{{ page.date | date_to_xmlschema }}'>
+
+    <div class='post-meta strong-blog-font'><time datetime='{{ page.date | date_to_xmlschema }}'>
+
       {{ page.date | date: '%A, %B %e, %Y' }}
     </time>
     {% if page.last_modified_at %}
@@ -22,7 +24,7 @@ layout: default
     {% if page.author %}
     <span></span>
     {% endif %}
-  </p>
+  </div>
 </header>
 <div class='post-content blog-font'>
   {{ content }}
