--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -108,7 +108,10 @@ excerpt_separator: <!-- more -->
             {% endif %}
             <li class='collection-item'>
               <a href='{{ post.url }}'>
-                <div class=''>
+                <div class="blog-collection-item">
+
+
+                <div class='blog-collection-title'>
                   {{ post.title }}
                   <div class='badge'>
                     <div class='hide-on-small-only'>
@@ -122,6 +125,7 @@ excerpt_separator: <!-- more -->
                   </div>
 
                 </div>
+                                </div>
               </a>
             </li>
             {% if forloop.last %}
