--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   </div>
   <div class='page-footer final-footer z-depth-1'>
     <div class='footer-copyright'>
-      <div class='container'>
+      <div class='copyright-container container'>
         <span class='hide-on-small-only show-on-medium-and-up'>
           © 2019 Case Linguist LLC
         </span>
