using bundle open to see glaring bugs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,36 +1,21 @@
 <!DOCTYPE html>
-<html lang='{{ page.lang | default: site.lang | default: "en" }}'>
-<body>
-  <p>
-    {% include head.html %}
-  </p>
-  {% include header.html %}
-  <main aria-label='Content' class='page-content'>
-    <div class='wrapper'>
-      {{ content }}
-    </div>
-  </main>
-  <div class='container'>
-    {% include footer.html %}
-  </div>
-  <div class='page-footer final-footer z-depth-1'>
-    <div class='footer-copyright'>
-      <div class='copyright-container container'>
-        <span class='hide-on-small-only show-on-medium-and-up'>
-          © 2019 Case Linguist LLC
-        </span>
-        <a class='grey-text text-lighten-4' href='{{ "/sitemap.html" | relative_url }}'>
-          <span>Visual Site Map</span>
-        </a>
-        <span class='show-on-small hide-on-med-and-up right'>
-          © 2019 Case Linguist LLC
-        </span>
-        <a class='grey-text text-lighten-4 right' href='mailto:rene@marketingforlawyers.org'>
-          <span>E-mail:</span>
-          <span>rene@marketingforlawyers.org</span>
-        </a>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+
+  {%- include head.html -%}
+
+  <body>
+
+    {%- include header.html -%}
+
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+        {{ content }}
       </div>
-    </div>
-  </div>
-</body>
+    </main>
+
+    {%- include footer.html -%}
+    {%- include pro-footer.html -%}
+
+  </body>
+
 </html>
