updating by snippet

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     </main>
 
     {%- include footer.html -%}
-    {%- include pro-footer.html -%}
+    {%- haml pro-footer.haml -%}
 
   </body>
 
