forgot about haml again

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     </main>
 
     {%- include footer.html -%}
-    {%- haml pro-footer.haml -%}
+    {%- include pro-footer.html -%}
 
   </body>
 
