--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,8 +18,8 @@
 
 
   <!-- google fonts -->
-  <!-- <link href="https://fonts.googleapis.com/css?family=Assistant|Cabin" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css?family=Rokkitt&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Assistant|Cabin" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Rokkitt&display=swap" rel="stylesheet"> -->
 
 
   <!-- font awesome -->
