--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,9 @@
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
+      <span class="title-text">{{ site.title | escape }}</span>
+    </a>
 
     {%- if page_paths -%}
       <nav class="site-nav">
