--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,9 +18,7 @@
 
 
   <!-- google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Assistant|Cabin" rel="stylesheet">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Rokkitt&display=swap" rel="stylesheet"> -->
-
+  <link href="https://fonts.googleapis.com/css?family=Assistant|Cabin&display=swap" rel="stylesheet">
 
   <!-- font awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.css" integrity="sha256-BbA16MRVnPLkcJWY/l5MsqhyOIQr7OpgUAkYkKVvYco=" crossorigin="anonymous" />
